--- a/index.html
+++ b/index.html
@@ -68,11 +68,19 @@
         <div class="row justify-content-between align-items-center">
           <div class="col-4">
             <a href="index.html">
-              <img class="logo" src="assets/images/logo-sun.png" alt="logo-sun">
+              <img
+                class="logo"
+                src="assets/images/logo-sun.png"
+                alt="logo-sun"
+              />
             </a>
           </div>
           <div class="col-4">
-            <img class="header__image d-flex ml-auto" src="assets/images/logo@.png" alt="logo-veu">
+            <img
+              class="header__image d-flex ml-auto"
+              src="assets/images/logo@.png"
+              alt="logo-veu"
+            />
           </div>
         </div>
       </div>
@@ -81,8 +89,88 @@
     <!--====== HEADER PART END ======-->
 
     <section class="banner wow bounceInDown">
-      <img class="banner__image" src="assets/images/banner2.jpg" alt="">
+      <img class="banner__image" src="assets/images/banner2.jpg" alt="" />
     </section>
+
+    <!--====== HIEU START ======-->
+
+    <section class="hieu">
+      <div class="content-1">
+        <div class="content-ngocanh wow slideInLeft" data-wow-duration="2s">
+          <div class="text">
+            <p>
+              Thân gửi bạn Ngọc Anh team PHP Nhân dịp ngày quốc tế phụ nữ ngày
+              8/3, chúc bạn có 1 ngày vui vẻ hạnh phúc bên những người yêu
+              thương. Chúc bạn mãi luôn xinh đẹp và những dự định trong tương
+              lai đều thành công và hoàn thành nững dự định mình chưa làm được,
+              Hi vong trong tương lai gần sẽ được gặp bạn Happy Woman's Day
+            </p>
+          </div>
+          <div class="image">
+            <img
+              class="image--1"
+              src="./assets/images/hieu/ngocanh1.jpg"
+              alt=""
+            />
+            <img
+              class="image--2"
+              src="./assets/images/hieu/ngocanh2.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+        <div class="content-hien wow slideInRight" data-wow-duration="2s">
+          <div class="text">
+            <p>
+              Gấu xinh, hoa đẹp, lời ca Chẳng bằng ánh mắt thiết tha của nàng
+              Gửi đến cô nàng của team Ruby ngàn lời chúc tốt đẹp nhất. Chúc Hìn
+              Hìn luôn xinh xắn, rực rỡ như những đóa hoa, luôn thành công trong
+              công việc và cuộc sống. Hy vọng sẽ sớm được gặp Hìn tại ngôi nhà
+              Sun* của chúng ta! Happy wommem's day!
+            </p>
+          </div>
+          <div class="image">
+            <img
+              class="image--1"
+              src="./assets/images/hieu/hiend1.jpg"
+              alt=""
+            />
+            <img class="image--2" src="./assets/images/hieu/hiend.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="content-2">
+        <div class="content-hang wow bounceInDown" data-wow-duration="2s">
+          <p>
+            Gửi cô nàng Thu Hằng của team FE Nhân dịp ngày quốc tế Phụ nữ 2022,
+            ngày của những bông hoa đẹp, chúc em luôn xinh tươi, rực rỡ như
+            những đóa hoa, luôn thành công và gặp nhiều điều may mắn trong công
+            việc, được crush hoặc người yêu tặng hoa và nhiều món quà bất ngờ
+            trong ngày siêu ý nghĩa này nè. Hi vọng em sẽ càng ngày càng tiến bộ
+            và gắn bó mãi với ngôi nhà Sun* của chúng mình. Happy women's day!
+          </p>
+        </div>
+        <div class="content-nhung wow bounceInUp" data-wow-duration="2s">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique
+            natus saepe omnis autem repellat. Aspernatur consectetur molestias
+            reprehenderit minima? Necessitatibus voluptatibus iure iste unde,
+            modi laboriosam. Dolorem a provident aliquid.
+          </p>
+        </div>
+        <div class="content-ngoc wow bounceInDown" data-wow-duration="2s">
+          <p>
+            Gửi bạn Hồng Ngọc team QA Nhân ngày quốc tế phụ nữ mình chúc bạn
+            luôn luôn hạnh phúc, xinh đẹp và gặp nhiều may mắn. Gặt hái được
+            nhiều thành công trong công việc và cuộc sống. Hi vọng dù ở đâu thì
+            bạn cũng sẽ luôn tỏa sáng như chính cái tên Hồng Ngọc của mình vậy.
+            Happy Woman's Day!
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!--====== HIEU END ======-->
 
     <footer class="footer-area"></footer>
 
