--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               <div class="container-left">
                 <div class="info">
                   <h4>Đoàn Thùy Phương</h4>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam sapiente, maxime molestiae autem nemo vitae quaerat voluptates dolores provident reprehenderit nisi numquam repellat quos dicta, placeat voluptatibus quasi. Repudiandae quia perspiciatis ipsam odio expedita aut. Neque animi possimus quis dignissimos, modi rem doloribus iusto excepturi eius saepe nam ut tempora!</p>
+                  <p>Hôm nay là mùng 8/3 và cũng là một ngày vô cùng đặc biệt với chị trainer của chúng em. Nhân ngày này,  em xin chúc chị trainer có một bầu trời sức khỏe, một biển cả tình thương cùng với một đại dương hạnh phúc và chúc chị mãi luôn xinh đẹp, khỏe mạnh để thật thành công trên con đường sự nghiệp. Happy Women’s Day !!!</p>
                 </div>
               </div>
               <div class="container-right">
