--- a/index.html
+++ b/index.html
@@ -371,8 +371,11 @@
 
     <section class="girl">
       <div class="row">
-        <div class="col col-12 col-md-6 col-of-2">
-          <div class="ngocanh wow slideInLeft" data-wow-duration="2s">
+        <div class="girl-el col col-12 col-md-6">
+          <div
+            class="girl-el__box girl-el__box--md ngocanh wow slideInLeft"
+            data-wow-duration="2s"
+          >
             <img src="./assets/images/hieu/ngocanh1.jpg" alt="" />
             <p class="girl-title">Đoàn Thị Ngọc Anh</p>
             <p>
@@ -384,8 +387,11 @@
             </p>
           </div>
         </div>
-        <div class="col col-12 col-md-6 col-of-2">
-          <div class="hien wow slideInRight" data-wow-duration="2s">
+        <div class="girl-el col col-12 col-md-6">
+          <div
+            class="girl-el__box girl-el__box--md hien wow slideInRight"
+            data-wow-duration="2s"
+          >
             <img src="./assets/images/hieu/hiend.jpg" alt="hien" />
             <p class="girl-title">Nguyễn Thị Hiền</p>
             <p>
@@ -399,8 +405,11 @@
         </div>
       </div>
       <div class="row">
-        <div class="col col-12 col-md-4 col-of-3">
-          <div class="nhung wow slideInLeft" data-wow-duration="2s">
+        <div class="girl-el col col-12 col-md-4">
+          <div
+            class="girl-el__box girl-el__box--sm nhung wow slideInLeft"
+            data-wow-duration="2s"
+          >
             <img src="./assets/images/hieu/nhung1.jpg" alt="" />
             <p class="girl-title">Đàm Thị Hồng Nhung</p>
             <p>
@@ -411,8 +420,11 @@
             </p>
           </div>
         </div>
-        <div class="col col-12 col-md-4 col-of-3">
-          <div class="hang wow bounceInUp" data-wow-duration="2s">
+        <div class="girl-el col col-12 col-md-4">
+          <div
+            class="girl-el__box girl-el__box--sm hang wow bounceInUp"
+            data-wow-duration="2s"
+          >
             <img src="./assets/images/hieu/hang1.png" alt="hang" />
             <p class="girl-title">Vũ Thị Thu Hằng</p>
             <p>
@@ -426,8 +438,11 @@
             </p>
           </div>
         </div>
-        <div class="col col-12 col-md-4 col-of-3">
-          <div class="ngoc wow slideInRight" data-wow-duration="2s">
+        <div class="girl-el col col-12 col-md-4">
+          <div
+            class="girl-el__box girl-el__box--sm ngoc wow slideInRight"
+            data-wow-duration="2s"
+          >
             <img src="./assets/images/hieu/ngoc1.jpg" alt="" />
             <p class="girl-title">Lương Hồng Ngọc</p>
             <p>
