--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             class="girl-el__box girl-el__box--md ngocanh wow slideInLeft"
             data-wow-duration="2s"
           >
-            <img src="./assets/images/hieu/ngocanh1.jpg" alt="" />
+            <img src="./assets/images/ngocanh1.jpg" alt="" />
             <p class="girl-title">Đoàn Thị Ngọc Anh</p>
             <p>
               Thân gửi bạn Ngọc Anh team PHP Nhân dịp ngày quốc tế phụ nữ ngày
@@ -392,7 +392,7 @@
             class="girl-el__box girl-el__box--md hien wow slideInRight"
             data-wow-duration="2s"
           >
-            <img src="./assets/images/hieu/hiend.jpg" alt="hien" />
+            <img src="./assets/images/hiend.jpg" alt="hien" />
             <p class="girl-title">Nguyễn Thị Hiền</p>
             <p>
               Gấu xinh, hoa đẹp, lời ca Chẳng bằng ánh mắt thiết tha của nàng
@@ -410,7 +410,7 @@
             class="girl-el__box girl-el__box--sm nhung wow slideInLeft"
             data-wow-duration="2s"
           >
-            <img src="./assets/images/hieu/nhung1.jpg" alt="" />
+            <img src="./assets/images/nhung1.jpg" alt="" />
             <p class="girl-title">Đàm Thị Hồng Nhung</p>
             <p>
               Gửi chị Đàm Thị Hồng Nhung < 3, Chúc chị một ngày quốc tế phụ nữa
@@ -425,7 +425,7 @@
             class="girl-el__box girl-el__box--sm hang wow bounceInUp"
             data-wow-duration="2s"
           >
-            <img src="./assets/images/hieu/hang1.png" alt="hang" />
+            <img src="./assets/images/hang1.png" alt="hang" />
             <p class="girl-title">Vũ Thị Thu Hằng</p>
             <p>
               Gửi cô nàng Thu Hằng của team FE Nhân dịp ngày quốc tế Phụ nữ
@@ -443,7 +443,7 @@
             class="girl-el__box girl-el__box--sm ngoc wow slideInRight"
             data-wow-duration="2s"
           >
-            <img src="./assets/images/hieu/ngoc1.jpg" alt="" />
+            <img src="./assets/images/ngoc1.jpg" alt="" />
             <p class="girl-title">Lương Hồng Ngọc</p>
             <p>
               Gửi bạn Hồng Ngọc team QA Nhân ngày quốc tế phụ nữ mình chúc bạn
