--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
   <!--====== Title ======-->
-  <title>Happy Woman day</title>
+  <title>Happy Women's Day</title>
 
   <!--====== Favicon Icon ======-->
   <link rel="icon" href="https://i.pinimg.com/564x/56/11/1e/56111e44a5c6c689ba7f1fcceb5df3df.jpg" sizes="32x32" />
@@ -78,6 +78,119 @@
     <img class="banner__image" src="assets/images/banner2.jpg" alt="">
   </section>
 
+  <!-- TruongGiang -->
+  <section class="nguyen-thi-huong">
+    <div class="container-g">
+      <div class="wrapper-inner">
+        <div class="container-left">
+          <div class="info wow fadeInDownBig">
+            <h4>Nguyễn Thị Hương</h4>
+            <p>Gửi chị Hương thân mến.
+              Hôm nay là 8/3, ngày đặc biệt dành riêng cho chị em phụ nữa trên thế giới. Em chúc chị luôn
+              xinh đẹp, sức khỏe dồi dào, thành công trong công việc và cuộc sống, luôn gặp được
+              những trainee đáng yêu, được mọi người yêu mến và đặc biệt là nửa kia của chị. Em
+              mong chị ngày càng tiến bộ và đi lên chị nhé!
+              Happy women's day!</p>
+          </div>
+        </div>
+        <div class="container-right">
+          <div class="img-container">
+            <img class="wow fadeIn" src="./assets/images/nguyenthihuong.jpg">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="vu-thi-ngoc">
+    <div class="container-g">
+      <div class="wrapper-inner">
+        <div class="container-left">
+          <div class="info wow fadeInUpBig">
+            <h4>Vũ Thị Ngọc</h4>
+            <p>Gửi chị Trainer yêu quý. Hôm nay là 8/3, ngày của những bóng hồng xinh đẹp và chăm chỉ. Với trainee chúng
+              em không gì quý bằng được anh chị trainner hướng dẫn, chỉ bảo. Nhân dịp 8/3 em thay mặt mọi người trong
+              nhóm chúc chị và gia đình có thật nhiều sức khỏe, niềm vui và sẽ cùng đại gia đình Sun* gặt hái được nhiều
+              thành công trong thời gian tới.</p>
+          </div>
+        </div>
+        <div class="container-right">
+          <div class="img-container">
+            <img class="wow zoomIn" src="./assets/images/vuthingoc.jpg">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="dang-thi-duyen">
+    <div class="container-g">
+      <div class="wrapper-inner">
+        <div class="container-left">
+          <div class="info wow flipInX">
+            <h4>Đặng Thị Duyên</h4>
+            <p>Thân gửi chị đại đứng đầu TIV nè
+              Một người chị lúc nào cũng quan tâm, lo lắng tới các em cả đến những việc rất cá nhân, đời thường. Nhờ chị
+              mà team chúng ta không còn cảm giác như môi trường công sở nữa mà thay vào đó là cảm giác ấm cúng của một
+              gia đình, mọi người gắn kết cùng nhau. Nhân dịp 8/3 chúng em chúc chị có một ngày lễ vui vẻ, hạnh phúc bên
+              gia đình và tiếp tục sát cánh cùng mọi người trên những thử thách sắp tới nhaaa.. much loveee</p>
+          </div>
+        </div>
+        <div class="container-right">
+          <div class="img-container">
+            <img class="wow flip" src="./assets/images/dangthiduyen.jpg">
+            <div class="hearts">
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
+              <i class="fa-solid fa-heart"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="doan-thuy-phuong">
+    <div class="container-g">
+      <div class="wrapper-inner">
+        <div class="container-left">
+          <div class="info wow lightSpeedIn">
+            <h4>Đoàn Thùy Phương</h4>
+            <p>Hôm nay là mùng 8/3 và cũng là một ngày vô cùng đặc biệt với chị trainer của chúng em. Nhân ngày này, em
+              xin chúc chị có một bầu trời sức khỏe, một biển cả tình thương cùng với một đại dương hạnh phúc và chúc
+              chị mãi luôn xinh đẹp, khỏe mạnh để thật thành công trên con đường sự nghiệp. <br/> Happy Women’s Day !!!</p>
+          </div>
+        </div>
+        <div class="container-right">
+          <div class="img-container">
+            <img class="wow rotateIn" src="./assets/images/PhuongDT1.jpg">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="ta-thi-minh-huyen">
+    <div class="container-g">
+      <div class="wrapper-inner">
+        <div class="container-left">
+          <div class="info wow rollIn">
+            <h4>Tạ Thị Minh Huyền</h4>
+            <p>Gửi chị Minh Huyền, nhân ngày quốc tế phụ nữ mùng 8 - 3. Chúc chị thật là xinh đẹp, khỏe mạnh, ngày càng
+              giỏi giang code ầm ầm ạ :>. Chúc chị có thêm nhiều niềm vui trong cuộc sống, trong công việc, để mỗi ngày
+              qua đi đều là một ngày vui. Nếu chị chưa có người iu, chúc chị sớm có 10 người iu :>, hoặc 1 người yêu
+              thương và trân trọng chị thật lòng. Hi Hi</p>
+          </div>
+        </div>
+        <div class="container-right">
+          <div class="img-container">
+            <img class="wow jackInTheBox" src="./assets/images/tathiminhhuyen.jpg">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!--====== Tuan B ======-->
   <section class="khanh-thuy-hien">
     <div class="container">
@@ -98,7 +211,7 @@
                 <div class="card shadow">
                   <div class="card-body">
                     <h5 class="card-title">Hà Thị An Khanh</h5>
-                    <span class="card-text">Gửi cô nàng QA An Khanh nè, <br> Hôm nay là ngày 8/3, là ngày của
+                    <p class="card-text">Gửi cô nàng QA An Khanh nè, <br> Hôm nay là ngày 8/3, là ngày của
                       chị em hội phụ nữ, vậy chắc chắn sẽ không thể quên được cô
                       nàng QA đáng yêu của team EDU đúng không. Nhân dịp đặc biệt
                       này, mình xin thay mặt anh em thiên địa hội chúc Khanh có một
@@ -106,7 +219,7 @@
                       nghiệp sẽ ngày một thăng tiến nha. Hi vọng trong thời gian sắp
                       tới, Khanh sẽ cùng các anh chị em S*Goal tiếp tục cố gắng để
                       dự án chúng ta ngày một sang xịn mịn. ๑(◕‿◕)๑ ٩(＾◡＾)۶ <br> <br> Thân
-                      gửi.</span>
+                      gửi.</p>
                   </div>
                 </div>
               </div>
@@ -170,7 +283,7 @@
     <div class="container">
       <div class="doly__wrapper row d-flex justify-content-center shadow wow bounceInUp">
         <div class="doly__card col-12 col-md-6 text-md-right wow bounceInLeft">
-          <h5 class="doly__title">Đỗ Thị Ly</h5>
+          <h3 class="doly__title">Đỗ Thị Ly</h3>
           <span class="doly__text">Nhân ngày Quốc tế phụ nữ, em chúc chị Ly luôn luôn xinh đẹp, an nhiên, vạn sự như ý.
             Chúc chị luôn giữ nụ cười vui vẻ, tự tin trên môi và hạnh phúc trong cuộc sống &lt;3. Mong chị luôn rạng rỡ ,
               trẻ trung và kiêu hãnh như loài hoa mang tên mình. </span>
@@ -234,7 +347,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4 col-12 girl wow fadeInRight">
+        <div class="col-md-4 col-12 wow fadeInRight">
           <div class="card">
             <img src="./assets/images/Image from iOS (1).jpg" class="card-img-top" alt="Nguyễn Minh Hạnh" />
             <div class="card-body">
@@ -265,119 +378,6 @@
               ngọt ngào, luôn vui vẻ, xinh xắn và thành công nhé ^^ Mong rằng
               thời gian tới sẽ sớm được gặp "thiên thần" tại Sun* family :p
             </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- TruongGiang -->
-  <section class="nguyen-thi-huong">
-    <div class="container-g">
-      <div class="wrapper-inner">
-        <div class="container-left">
-          <div class="info wow fadeInDownBig">
-            <h4>Nguyễn Thị Hương</h4>
-            <p>Gửi chị Hương thân mến.
-              Hôm nay là 8/3, ngày đặc biệt dành riêng cho chị em phụ nữa trên thế giới. Em chúc chị luôn
-              xinh đẹp, sức khỏe dồi dào, thành công trong công việc và cuộc sống, luôn gặp được
-              những trainee đáng yêu, được mọi người yêu mến và đặc biệt là nửa kia của chị. Em
-              mong chị ngày càng tiến bộ và đi lên chị nhé!
-              Happy women's day!</p>
-          </div>
-        </div>
-        <div class="container-right">
-          <div class="img-container">
-            <img class="wow fadeIn" src="./assets/images/nguyenthihuong.jpg">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="vu-thi-ngoc">
-    <div class="container-g">
-      <div class="wrapper-inner">
-        <div class="container-left">
-          <div class="info wow fadeInUpBig">
-            <h4>Vũ Thị Ngọc</h4>
-            <p>Gửi chị Trainer yêu quý. Hôm nay là 8/3, ngày của những bóng hồng xinh đẹp và chăm chỉ. Với trainee chúng
-              em không gì quý bằng được anh chị trainner hướng dẫn, chỉ bảo. Nhân dịp 8/3 em thay mặt mọi người trong
-              nhóm chúc chị và gia đình có thật nhiều sức khỏe, niềm vui và sẽ cùng đại gia đình Sun* gặt hái được nhiều
-              thành công trong thời gian tới.</p>
-          </div>
-        </div>
-        <div class="container-right">
-          <div class="img-container">
-            <img class="wow zoomIn" src="./assets/images/vuthingoc.jpg">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="dang-thi-duyen">
-    <div class="container-g">
-      <div class="wrapper-inner">
-        <div class="container-left">
-          <div class="info wow flipInX">
-            <h4>Đặng Thị Duyên</h4>
-            <p>Thân gửi chị đại cầm đầu TIV nè
-              Một người chị lúc nào cũng quan tâm, lo lắng tới các em cả đến những việc rất cá nhân, đời thường. Nhờ chị
-              mà team chúng ta không còn cảm giác như môi trường công sở nữa mà thay vào đó là cảm giác ấm cúng của một
-              gia đình, mọi người gắn kết cùng nhau. Nhân dịp 8/3 chúng em chúc chị có một ngày lễ vui vẻ, hạnh phúc bên
-              gia đình và tiếp tục sát cánh cùng mọi người trên những thử thách sắp tới nhaaa.. much loveee</p>
-          </div>
-        </div>
-        <div class="container-right">
-          <div class="img-container">
-            <img class="wow flip" src="./assets/images/dangthiduyen.jpg">
-            <div class="hearts">
-              <i class="fa-solid fa-heart"></i>
-              <i class="fa-solid fa-heart"></i>
-              <i class="fa-solid fa-heart"></i>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="doan-thuy-phuong">
-    <div class="container-g">
-      <div class="wrapper-inner">
-        <div class="container-left">
-          <div class="info wow lightSpeedIn">
-            <h4>Đoàn Thùy Phương</h4>
-            <p>Hôm nay là mùng 8/3 và cũng là một ngày vô cùng đặc biệt với chị trainer của chúng em. Nhân ngày này, em
-              xin chúc chị có một bầu trời sức khỏe, một biển cả tình thương cùng với một đại dương hạnh phúc và chúc
-              chị mãi luôn xinh đẹp, khỏe mạnh để thật thành công trên con đường sự nghiệp. Happy Women’s Day !!!</p>
-          </div>
-        </div>
-        <div class="container-right">
-          <div class="img-container">
-            <img class="wow rotateIn" src="./assets/images/PhuongDT1.jpg">
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="ta-thi-minh-huyen">
-    <div class="container-g">
-      <div class="wrapper-inner">
-        <div class="container-left">
-          <div class="info wow rollIn">
-            <h4>Tạ Thị Minh Huyền</h4>
-            <p>Gửi chị Minh Huyền, nhân ngày quốc tế phụ nữ mùng 8 - 3. Chúc chị thật là xinh đẹp, khỏe mạnh, ngày càng
-              giỏi giang code ầm ầm ạ :>. Chúc chị có thêm nhiều niềm vui trong cuộc sống, trong công việc, để mỗi ngày
-              qua đi đều là một ngày vui. Nếu chị chưa có người iu, chúc chị sớm có 10 người iu :>, hoặc 1 người yêu
-              thương và trân trọng chị thật lòng. Hi Hi</p>
-          </div>
-        </div>
-        <div class="container-right">
-          <div class="img-container">
-            <img class="wow jackInTheBox" src="./assets/images/tathiminhhuyen.jpg">
           </div>
         </div>
       </div>
@@ -431,7 +431,7 @@
           <span class="name">Hoàng Thị Thanh</span>
           <p class="wishes">Nhân ngày quốc tế phụ nữ chúc nàng Thanh của chúng mình luôn tươi vui rạng rỡ,
             có nhiều niềm vui bên cạnh gia đình và người thân. Luôn gặp thật nhiều may mắn trong công việc và tình yêu,
-            hi vọng chúng ta sẽ sớm được gặp nhau ^^ </p>
+            hi vọng chúng ta sẽ sớm được gặp nhau ^^. </p>
         </div>
       </div>
     </div>
@@ -448,7 +448,7 @@
               <img src="./assets/images/ngoclan.JPG" alt="Hoang Thi Thanh">
             </div>
             <div class="img-round">
-              <img src="./assets/images/ngoclan2.JPG" alt="Hoang Thi Thanh">
+              <img src="./assets/images/ngoclan2.jpg" alt="Hoang Thi Thanh">
             </div>
           </div>
           <div class="col-12 col-lg-6 col-md-6 align-self-center card shadow card-round mb-4">
@@ -456,7 +456,7 @@
             <p class="wishes-round">Thân gửi Ngọc Lan dễ thương kute hột me nè <br>
               Nhân ngày Quốc tế Phụ nữ chúc Lan luôn vui vẻ yêu đời, sống hạnh phúc bên gia đình người thân và luôn gặp
               nhiều may mắn trong công việc và tình yêu nhé! Hi vọng chúng ta có thể sớm gặp mặt và làm quen với nhau
-              nhé
+              nhé.
             </p>
           </div>
         </div>
@@ -467,11 +467,11 @@
               Nguyễn Thị Hạnh E
             </span>
             <p class="wishes-round">Thân gửi cô bạn dễ thương đến từ team QA <br>
-              Nhân ngày vui của phụ nữ ở khắp nơi trên thế giới,xin gửi tới bạn lời chúc tốt đẹp, nồng nàn tràn đầy yêu
+              Nhân ngày vui của phụ nữ ở khắp nơi trên thế giới, xin gửi tới bạn lời chúc tốt đẹp, nồng nàn tràn đầy yêu
               thương nhất.
-              Chúc cho bạn luôn hạnh phúc,hồn nhiên,vui vẻ không chỉ trong ngày này mà trong cả 364 ngày còn lại trong
-              năm.Chúc cho những dự định trong công việc và cuộc sống của bạn đều trở thành hiện thực.
-              Rất mong một ngày đẹp trời không xa chúng ta sẽ hội ngộ tại Sun* </p>
+               Chúc cho bạn luôn hạnh phúc, hồn nhiên, vui vẻ không chỉ trong ngày này mà trong cả 364 ngày còn lại trong
+              năm. Chúc cho những dự định trong công việc và cuộc sống của bạn đều trở thành hiện thực.
+              Rất mong một ngày đẹp trời không xa chúng ta sẽ hội ngộ tại Sun*. </p>
           </div>
           <div class="slider-img col-12 col-lg-6 col-md-6">
             <div class="img-round">
@@ -492,7 +492,6 @@
         <div class="girl-el col col-12 col-md-6">
           <div
             class="girl-el__box girl-el__box--md ngocanh wow slideInLeft"
-            data-wow-duration="2s"
           >
             <img src="./assets/images/ngocanh1.jpg" alt="" />
             <p class="girl-title">Đoàn Thị Ngọc Anh</p>
@@ -501,14 +500,13 @@
               8/3, chúc bạn có 1 ngày vui vẻ hạnh phúc bên những người yêu
               thương. Chúc bạn mãi luôn xinh đẹp và những dự định trong tương
               lai đều thành công và hoàn thành nững dự định mình chưa làm được,
-              Hi vong trong tương lai gần sẽ được gặp bạn Happy Woman's Day
+              Hi vong trong tương lai gần sẽ được gặp bạn Happy Woman's Day.
             </p>
           </div>
         </div>
         <div class="girl-el col col-12 col-md-6">
           <div
             class="girl-el__box girl-el__box--md hien wow slideInRight"
-            data-wow-duration="2s"
           >
             <img src="./assets/images/hiend.jpg" alt="hien" />
             <p class="girl-title">Nguyễn Thị Hiền</p>
@@ -526,7 +524,6 @@
         <div class="girl-el col col-12 col-md-4">
           <div
             class="girl-el__box girl-el__box--sm nhung wow slideInLeft"
-            data-wow-duration="2s"
           >
             <img src="./assets/images/nhung1.jpg" alt="" />
             <p class="girl-title">Đàm Thị Hồng Nhung</p>
@@ -541,7 +538,6 @@
         <div class="girl-el col col-12 col-md-4">
           <div
             class="girl-el__box girl-el__box--sm hang wow bounceInUp"
-            data-wow-duration="2s"
           >
             <img src="./assets/images/hang1.png" alt="hang" />
             <p class="girl-title">Vũ Thị Thu Hằng</p>
@@ -559,7 +555,6 @@
         <div class="girl-el col col-12 col-md-4">
           <div
             class="girl-el__box girl-el__box--sm ngoc wow slideInRight"
-            data-wow-duration="2s"
           >
             <img src="./assets/images/ngoc1.jpg" alt="" />
             <p class="girl-title">Lương Hồng Ngọc</p>
@@ -575,7 +570,9 @@
       </div>
     </section>
 
-  <footer class="footer-area"></footer>
+  <footer class="footer">
+    <p class="footer__content"> © 2022 By TIV boys - All rights reserved.</p>
+  </footer>
   <a href="#" class="back-to-top"><i class="lni-chevron-up"></i></a>
 
 
